@@ -1,6 +1,7 @@
 Version 2.6.4-devel
 -------------------
 - Further differences against txt2tags version 2.6:
+  - Support python3.
   - Make utf-8 encoding default.
 
 
